# cxlscm

./: CMakeLists.txt  README.md  sample_threadx.ld
be/inc/: address_translation.h  aes_crypto.h  bbm.h  bch.h  be_common.h  media_health.h  media_manager.h  pcm_controller.h  pcm_registers.h  wear_leveling.h
be/src/: address_translation.c  aes_crypto.c  bbm.c  bch.c  be_main.c  media_health.c  media_manager.c  pcm_controller.c  wear_leveling.c
cxlscm/: firmware_common.h  start_threadx.c  syscalls.c  tx_user.h
fe/inc/: cxl_defs.h  cxl_registers.h  fe_common.h  fw_update.h  hw_access.h  hw_registers.h  mailbox.h  sensor_driver.h  telemetry.h
fe/src/: cxl_init.c  fe_main.c  fw_update.c  host_handshake.c  hw_access.c  mailbox.c  media_status.c  sensor_driver.c  telemetry.c
threadx/: CMakeLists.txt  toolchain-arc-metaware.cmake
